# weather-proxy

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
scripts/: enum.py  symbols.txt
src/: config.rs  main.rs  tracing.rs
src/http/: routes.rs  server.rs
src/repo/: cache.rs  mod.rs  yr.rs
src/service/: weather.rs
tests/: yr.example.json
